--- a/package.json
+++ b/package.json
@@ -17,6 +17,12 @@
     "check-types": "turbo run check-types"
   },
   "devDependencies": {
+    "@zanejs/commitlint-config": "workspace:*",
+    "@zanejs/eslint-config": "workspace:*",
+    "@zanejs/prettier-config": "workspace:*",
+    "@zanejs/stylelint-config": "workspace:*",
+    "@zanejs/tsconfig": "workspace:*",
+    "@zanejs/vite-config": "workspace:*",
     "@changesets/changelog-github": "catalog:",
     "@changesets/cli": "catalog:",
     "unbuild": "catalog:",
@@ -30,86 +36,11 @@
     "vitest": "catalog:",
     "@vitejs/plugin-vue": "catalog:",
     "@vitejs/plugin-vue-jsx": "catalog:",
-    "prettier": "catalog:",
-    "@eslint/js": "catalog:",
-    "@types/eslint": "catalog:",
-    "@typescript-eslint/eslint-plugin": "catalog:",
-    "@typescript-eslint/parser": "catalog:",
-    "eslint": "catalog:",
-    "eslint-plugin-eslint-comments": "catalog:",
-    "eslint-plugin-jsdoc": "catalog:",
-    "eslint-plugin-jsonc": "catalog:",
-    "eslint-plugin-n": "catalog:",
-    "eslint-plugin-no-only-tests": "catalog:",
-    "eslint-plugin-perfectionist": "catalog:",
-    "eslint-plugin-prettier": "catalog:",
-    "eslint-plugin-regexp": "catalog:",
-    "eslint-plugin-unicorn": "catalog:",
-    "eslint-plugin-unused-imports": "catalog:",
-    "eslint-plugin-vitest": "catalog:",
-    "eslint-plugin-vue": "catalog:",
-    "globals": "catalog:",
-    "jsonc-eslint-parser": "catalog:",
-    "vue-eslint-parser": "catalog:",
-    "postcss": "catalog:",
-    "postcss-html": "catalog:",
-    "postcss-scss": "catalog:",
-    "stylelint": "catalog:",
-    "stylelint-config-recommended": "catalog:",
-    "stylelint-config-recommended-scss": "catalog:",
-    "stylelint-config-recommended-vue": "catalog:",
-    "stylelint-config-standard": "catalog:",
-    "stylelint-order": "catalog:",
-    "stylelint-prettier": "catalog:",
-    "@pnpm/workspace.read-manifest": "catalog:",
-    "@types/archiver": "catalog:",
-    "@types/html-minifier-terser": "catalog:",
-    "dotenv": "catalog:",
-    "rollup": "catalog:",
-    "rollup-plugin-visualizer": "catalog:",
-    "sass": "catalog:",
-    "vite-plugin-compression": "catalog:",
-    "vite-plugin-dts": "catalog:",
-    "vite-plugin-html": "catalog:",
-    "vite-plugin-lazy-import": "catalog:"
+    "prettier": "catalog:"
   },
   "packageManager": "pnpm@10.12.4",
   "engines": {
     "node": ">=20.10.0",
     "pnpm": ">=10.12.4"
-  },
-  "dependencies": {
-    "@commitlint/cli": "catalog:",
-    "@commitlint/config-conventional": "catalog:",
-    "commitlint-plugin-function-rules": "catalog:",
-    "cz-git": "catalog:",
-    "czg": "catalog:",
-    "eslint-config-turbo": "catalog:",
-    "eslint-plugin-command": "catalog:",
-    "eslint-plugin-import-x": "catalog:",
-    "prettier-plugin-tailwindcss": "catalog:",
-    "@stylistic/stylelint-plugin": "catalog:",
-    "stylelint-config-recess-order": "catalog:",
-    "stylelint-scss": "catalog:",
-    "@changesets/git": "catalog:",
-    "@manypkg/get-packages": "catalog:",
-    "chalk": "catalog:",
-    "consola": "catalog:",
-    "dayjs": "catalog:",
-    "execa": "catalog:",
-    "find-up": "catalog:",
-    "ora": "catalog:",
-    "pkg-types": "catalog:",
-    "rimraf": "catalog:",
-    "@intlify/unplugin-vue-i18n": "catalog:",
-    "@jspm/generator": "catalog:",
-    "archiver": "catalog:",
-    "cheerio": "catalog:",
-    "get-port": "catalog:",
-    "html-minifier-terser": "catalog:",
-    "nitropack": "catalog:",
-    "resolve.exports": "catalog:",
-    "vite-plugin-pwa": "catalog:",
-    "vite-plugin-vue-devtools": "catalog:"
   }
 }
