--- a/package.json
+++ b/package.json
@@ -12,35 +12,47 @@
     "clean": "node ./scripts/clean.mjs",
     "commit": "czg",
     "dev": "turbo-run dev",
-    "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
+    "dev:docs": "pnpm -F @zanejs/docs run dev",
+    "format": "node ./scripts/lint.mjs --format",
+    "lint": "node ./scripts/lint.mjs",
+    "check-types": "turbo run check-types",
+    "postinstall": "pnpm -r run stub --if-present",
+    "preinstall": "npx only-allow pnpm",
+    "prepare": "is-ci || husky",
+    "preview": "turbo-run preview",
+    "reinstall": "pnpm clean --del-lock && pnpm install"
   },
   "devDependencies": {
+    "@changesets/changelog-github": "catalog:",
+    "@changesets/cli": "catalog:",
+    "@types/node": "catalog:",
+    "@vitejs/plugin-vue": "catalog:",
+    "@vitejs/plugin-vue-jsx": "catalog:",
     "@zanejs/commitlint-config": "workspace:*",
     "@zanejs/eslint-config": "workspace:*",
+    "@zanejs/node-utils": "workspace:*",
     "@zanejs/prettier-config": "workspace:*",
     "@zanejs/stylelint-config": "workspace:*",
     "@zanejs/tsconfig": "workspace:*",
     "@zanejs/vite-config": "workspace:*",
-    "@changesets/changelog-github": "catalog:",
-    "@changesets/cli": "catalog:",
-    "unbuild": "catalog:",
-    "vite": "catalog:",
-    "turbo": "catalog:",
     "cross-env": "catalog:",
     "cspell": "catalog:",
+    "eslint": "catalog:",
     "husky": "catalog:",
+    "is-ci": "catalog:",
     "lint-staged": "catalog:",
+    "prettier": "catalog:",
+    "prettier-plugin-tailwindcss": "catalog:",
+    "stylelint": "catalog:",
+    "turbo": "catalog:",
     "typescript": "catalog:",
-    "vitest": "catalog:",
-    "@vitejs/plugin-vue": "catalog:",
-    "@vitejs/plugin-vue-jsx": "catalog:",
-    "prettier": "catalog:"
+    "unbuild": "catalog:",
+    "vite": "catalog:",
+    "vitest": "catalog:"
   },
-  "packageManager": "pnpm@10.12.4",
   "engines": {
     "node": ">=20.10.0",
     "pnpm": ">=10.12.4"
-  }
+  },
+  "packageManager": "pnpm@10.12.4"
 }
