--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,6 +3,8 @@ packages:
   - packages/*
   - internal/*
   - internal/lint-configs/*
+  - scripts/*
+  - docs
 
 catalog:
   prettier: ^3.6.2
@@ -31,7 +33,7 @@ catalog:
   '@types/eslint': ^9.6.1
   '@typescript-eslint/eslint-plugin': ^8.36.0
   '@typescript-eslint/parser': ^8.36.0
-  eslint: ^9.31.0
+  eslint: 9.31.0
   eslint-plugin-eslint-comments: ^3.2.0
   eslint-plugin-jsdoc: ^51.3.4
   eslint-plugin-jsonc: ^2.20.1
@@ -47,14 +49,14 @@ catalog:
   globals: ^16.3.0
   jsonc-eslint-parser: ^2.4.0
   vue-eslint-parser: ^10.2.0
-  prettier-plugin-tailwindcss: ^0.6.14
+  prettier-plugin-tailwindcss: 0.6.14
   '@stylistic/stylelint-plugin': ^3.1.3
   stylelint-config-recess-order: ^7.1.0
   stylelint-scss: ^6.12.1
   postcss: ^8.5.6
   postcss-html: ^1.8.0
   postcss-scss: ^4.0.9
-  stylelint: ^16.21.1
+  stylelint: 16.21.1
   stylelint-config-recommended: ^16.0.0
   stylelint-config-recommended-scss: ^15.0.1
   stylelint-config-recommended-vue: ^1.6.1
@@ -92,6 +94,10 @@ catalog:
   vite-plugin-dts: ^4.5.4
   vite-plugin-html: ^3.2.2
   vite-plugin-lazy-import: ^1.0.7
+  '@clack/prompts': ^0.11.0
+  cac: ^6.7.14
+  is-ci: ^4.1.0
+  '@types/node': ^24.0.13
 
 ignoredBuiltDependencies:
   - '@parcel/watcher'
