fix: change ISSUE_TEMPLATE

--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -1,5 +1,5 @@
 name: 🐞 Bug Report
-description: Report an issue with Vben Admin to help us make it better.
+description: Report an issue with ZaneJS to help us make it better.
 title: 'Bug: '
 labels: ['bug: pending triage']
 
@@ -14,8 +14,7 @@ body:
       label: Version
       description: What version of our software are you running?
       options:
-        - Vben Admin V5
-        - Vben Admin V2
+        - ZaneJS V1
       default: 0
     validations:
       required: true
