fix: 修复发版出错的问题

--- a/.npmrc
+++ b/.npmrc
@@ -8,3 +8,6 @@ public-hoist-pattern[]=stylelint
 public-hoist-pattern[]=*postcss*
 public-hoist-pattern[]=@commitlint/*
 public-hoist-pattern[]=czg
+
+auto-install-peers=true
+strict-peer-dependencies=false
