--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
         uses: ./.github/actions/setup-node
 
       - name: Build
-        run: pnpm build:docs
+        run: pnpm build
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
