fix: update deployu.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
         id: push_directory
         uses: cpina/github-action-push-to-another-repository@target-branch
         env:
-          API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
+          API_TOKEN_GITHUB: ${{ secrets.ACTIONS_DEPLOY_KEY }}
         with:
           source-directory: .
           destination-github-username: 'zanedeng'
