--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,10 +25,9 @@ jobs:
       - name: Pushes to another repository
         id: push_directory
         uses: cpina/github-action-push-to-another-repository@target-branch
-        # env:
-        #   API_TOKEN_GITHUB: ${{ secrets.DEPLOY_TOKEN }}
+        env:
+          SSH_DEPLOY_KEY: ${{ secrets.DEPLOY_TOKEN }}
         with:
-          github_token: ${{ secrets.DEPLOY_TOKEN }}
           source-directory: ./docs/.vitepress/dist
           destination-github-username: 'zanedeng'
           destination-repository-name: 'zanedeng.github.io'
