fix: update deployu.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
         id: push_directory
         uses: cpina/github-action-push-to-another-repository@target-branch
         env:
-          SSH_DEPLOY_KEY: ${{ secrets.DEPLOY_TOKEN }}
+          API_TOKEN_GITHUB: ${{ secrets.DEPLOY_TOKEN }}
         with:
           source-directory: ./docs/.vitepress/dist
           destination-github-username: 'zanedeng'
